--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "binarybreach.github.io" 
+url: "https://binarybreach.github.io" 
 twitter_username: N/A
-github_username:  emranh
+github_username:  binarybreach
 
 # Build settings
 theme: minima
