--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: BinaryBreach
+title: Zero Threats
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://binarybreach.github.io" 
+url: "https://zerothreats.github.io" 
 twitter_username: N/A
-github_username:  binarybreach
+github_username:  zerothreats
 
 # Build settings
 theme: minima
